[tool.poetry]
name = "googletv"
version = "0.0.1"
description = ""
authors = ["Sören Oldag <soeren_oldag@freenet.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "googletv"}]

[tool.poetry.dependencies]
python = "^3.11"
adb-shell = {extras = ["async"], version = "^0.4.3"}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
flake8-class-attributes-order = "^0.1.3"
flake8-import-order = "^0.18.1"
flake8-warnings = "^0.4.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["adb_shell.*"]
ignore_missing_imports = true
